--- a/recruit-gui/src/app/login-user/login-user.component.css
+++ b/recruit-gui/src/app/login-user/login-user.component.css
@@ -105,3 +105,18 @@ input{
 .forgotten-password-button{
 	width:135px;
 }
+
+.new-subscription {
+	margin-top:20px;
+	margin-bottom:20px;
+	text-align:center;	
+}
+
+.new-subscription h2{
+	color: green;
+	
+}
+
+.new-subscription h3{
+	font-size:14px;
+}
