--- a/recruit-gui/src/app/recruiter-account/recruiter-account.component.css
+++ b/recruit-gui/src/app/recruiter-account/recruiter-account.component.css
@@ -82,11 +82,16 @@
     min-width:100px;
 }
 
-.no-sub-warn{
-	color:red;
+.no-sub-warn {
 	text-align:center;
 	margin-top:20px;
 	margin-bottom:50px;
+}
+
+.no-sub-warn h1, h2{
+	color:green;
+	 margin-bottom:20px;
+	 margin-top:0px;
 }
 
 .action-buttons{
@@ -114,6 +119,41 @@
 }
 
 .rec-account-footer{
-		
 	height:50px;
+}
+
+.company-details{
+	margin: auto;
+  	width: 50%;
+}
+
+.company-details table {
+	width:100%;	
+	border:1px solid grey;
+	
+}
+
+.company-details table tr td{
+	padding:10px;	
+	text-align:left;	
+}
+
+.company-details input[type="text"]{
+	width:100%;
+}
+
+.company-details textarea{
+	width:100%;
+	height:70px;
+}
+
+.label{
+	background:grey;
+	font-weight:bold;
+}
+
+.btnSubscribe{
+	height:50px;
+	padding:10px;
+	float:right;
 }
