--- a/recruit-gui/src/app/recruiter-account/recruiter-account.component.html
+++ b/recruit-gui/src/app/recruiter-account/recruiter-account.component.html
@@ -41,7 +41,7 @@
 					</tr>
 					<tr>
 						<td class="table-left-hdr">Email Address</td>
-						<td class="table-cell label" *ngIf="!isInEditMode"><label>{{recruiter.email}}</label></td>
+						<td class="table-cell" *ngIf="!isInEditMode"><label>{{recruiter.email}}</label></td>
 						<td class="table-cell" *ngIf="isInEditMode">
 							<input type="text" formControlName="email"/> 
 						</td>
@@ -59,35 +59,35 @@
 					</tr>
 					<tr>
 						<td class="table-left-hdr">Company Name</td>
-						<td class="table-cell label" *ngIf="!isInEditMode"><label>{{recruiter.companyName}}</label></td>
+						<td class="table-cell" *ngIf="!isInEditMode"><label>{{recruiter.companyName}}</label></td>
 						<td class="table-cell" *ngIf="isInEditMode">
 							<input type="text" formControlName="companyName"/> 
 						</td>
 					</tr>
 					<tr>
 						<td class="table-left-hdr">Company Address</td>
-						<td class="table-cell label" *ngIf="!isInEditMode"><label>{{recruiter.companyAddress}}</label></td>
+						<td class="table-cell" *ngIf="!isInEditMode"><label>{{recruiter.companyAddress}}</label></td>
 						<td class="table-cell" *ngIf="isInEditMode">
 							<textarea formControlName="companyAddress"></textarea> 
 						</td>
 					</tr>
 					<tr>
 						<td class="table-left-hdr">Company Country</td>
-						<td class="table-cell label" *ngIf="!isInEditMode"><label>{{recruiter.companyCountry}}</label></td>
+						<td class="table-cell" *ngIf="!isInEditMode"><label>{{recruiter.companyCountry}}</label></td>
 						<td class="table-cell" *ngIf="isInEditMode">
 							<input type="text" formControlName="companyCountry"/> 
 						</td>
 					</tr>
 					<tr>
 						<td class="table-left-hdr">Company VAT Number</td>
-						<td class="table-cell label" *ngIf="!isInEditMode"><label>{{recruiter.companyVatNumber}}</label></td>
+						<td class="table-cell" *ngIf="!isInEditMode"><label>{{recruiter.companyVatNumber}}</label></td>
 						<td class="table-cell" *ngIf="isInEditMode">
 							<input type="text" formControlName="companyVatNumber"/> 
 						</td>
 					</tr>
 					<tr>
 						<td class="table-left-hdr">Company Registration Number</td>
-						<td class="table-cell label" *ngIf="!isInEditMode"><label>{{recruiter.companyRegistrationNumber}}</label></td>
+						<td class="table-cell" *ngIf="!isInEditMode"><label>{{recruiter.companyRegistrationNumber}}</label></td>
 						<td class="table-cell" *ngIf="isInEditMode">
 							<input type="text" formControlName="companyRegistrationNumber"/> 
 						</td>
@@ -104,10 +104,55 @@
 	
 	<!-- Subscriptions -->
 	<div class="container-div container-div-high" *ngIf="showSubscriptions">
-		<h2>Your subscriptions</h2>
+		<h2 *ngIf="hasActiveSubscription()">Your subscriptions</h2>
 		
 		<div *ngIf="!hasActiveSubscription()" class="no-sub-warn">
-			<b>Warning:</b> You currently have no active subscription. Please add a new Subscription to continue accessing the system
+		
+			<h1>Your 90 day free trial has come to an end</h1>
+			<p>
+			We hope that you found the site useful and would like to continue with us in the future. For continued access a subscription costs 
+			just 120 euro's per year excluding tax. 
+			</p>
+			<p>
+			There are no other fees involved. You will have full access to all the features on the site and will be able to place as many candidates 
+			as you you like for no additional fees.
+			</p>
+			
+			<h2>Annual Subscription 120 euro's</h2>
+			
+			<div class="company-details">
+				<form [formGroup]="accoundDetailsForm">
+					<table>
+						<tr>
+							<td class="label">Company Name</td>
+							<td><input type="text" formControlName="companyName"></td>
+						</tr>
+						<tr>
+							<td class="label">Company Address</td>
+							<td><textarea formControlName="companyAddress"></textarea></td>
+						</tr>
+						<tr>
+							<td class="label">Company Country</td>
+							<td><input type="text" formControlName="companyCountry"></td>
+						</tr>
+						<tr>
+							<td class="label">Company Tax Number</td>
+							<td><input type="text" formControlName="companyVatNumber"></td>
+						</tr>
+						<tr>
+							<td class="label">Company Registration Number</td>
+							<td><input type="text" formControlName="companyRegistrationNumber"></td>
+						</tr>
+						<tr>
+							<td class="label"></td>
+							<td>
+								<button class="btn btn-secondary btnRight btnSubscribe" (click)="confirmSwitchToYearlySubscription()">Confirm Subscription</button>
+							</td>
+						</tr>
+					</table>
+				</form>
+			</div>
+		
 		</div>
 		
 		<div *ngIf="hasUnpaidSubscription()" class="no-sub-warn">
@@ -146,69 +191,7 @@
 				</tr>
 			</table>
 		</div>
-		<div class="subscriptions-options-div" *ngIf="!hasUnpaidSubscription()">
-			<h2>Add new Subscription</h2>
-			
-			<div>
-				
-				<table class="table subscription-options-table">
-					<thead>
-						<tr>
-							<th class="bg-tab-hdr">Subscription Type</th>
-							<th class="bg-tab-hdr">details</th>
-							<th class="bg-tab-hdr"></th>
-						</tr>
-					</thead>
-					<tr style="border-bottom:2px black solid" *ngIf="hasFirstGenSubscription()">
-						<td><b>First Gen</b></td>
-						<td>
-							<ul>
-								<li>No fixed costs</li>
-								<li>550 EUR ex btw for each perm candidate that you place</li>
-								<li>1,50 EUR ex btw hourly margin for each freelance candidate you place</li>
-								<li>Invoices sent monthly. 30 day payment term</li>
-							</ul>
-						</td>
-						
-						<td>&nbsp;</td>
-					</tr>
-					<tr style="border-bottom:2px black solid" *ngIf="!hasFirstGenSubscription()">
-						<td><b>Trial Period</b></td>
-						<td>
-							<ul>
-								<li>30 Day free trial</li>
-								<li>Full access to candidate DB</li>
-								<li>Full access to Job boad</li>
-							</ul>
-						</td>
-						<td class="subscription-table-btn">
-							
-						</td>
-					</tr>
-					<tr>
-						<td><b>Yearly subscription</b></td>
-						<td>
-							<ul>
-								<li>Fixed cost of 120 EUR ex btw for 12 months access to the system</li>
-								<li>Unlimited CV downloads</li>
-								<li>Unlimited job listings</li>
-								<li>No additional costs for placed candidates</li>
-								<li>Invoices sent once per year. 30 day payment term</li>
-							</ul>
-						</td>
-						<td class="subscription-table-btn" *ngIf="getCurrentSubscriptionType() != 'YEAR_SUBSCRIPTION'">
-							<div><button class="btn btn-secondary 	alter-subscription-btn" 			*ngIf="!hasUnpaidSubscription() && !showSwitchToYearlySubscriptionConfirmButtons"	(click)="switchToYearlySubscription()">Select this Subscription</button></div>
-							<div><button class="btn btn-secondary 	alter-subscription-btn-confirm" 	*ngIf="!hasUnpaidSubscription() && showSwitchToYearlySubscriptionConfirmButtons" 	(click)="confirmSwitchToYearlySubscription()">Confirm</button></div>
-							<div><button class="btn btn-secondary 	alter-subscription-btn-cancel" 		*ngIf="!hasUnpaidSubscription() && showSwitchToYearlySubscriptionConfirmButtons"	(click)="cancelAlterSubscriptionOptions()">Cancel</button></div>
-						</td>
-						<td *ngIf="getCurrentSubscriptionType() === 'YEAR_SUBSCRIPTION'"></td>
-					</tr>
-				</table>
-		</div>
-	</div>
-	
-	
-	
+		
 </div>
 
-<div class="rec-account-footer"></div>
+<div *ngIf="hasActiveSubscription()" class="rec-account-footer"></div>
