quick and rather ugly fix for create candidate. Assumes issue is photo which is usually the case. to be improved later

--- a/recruit-gui/src/app/create-candidate/create-candidate.component.html
+++ b/recruit-gui/src/app/create-candidate/create-candidate.component.html
@@ -45,7 +45,7 @@
 							</p>
 						</div>
 						<div class="div-spacing">
-							<p style="border-bottom:2px solid black;">Profile Photo</p>
+							<p style="border-bottom:2px solid black;">Profile Photo [ .jpeg / .png ] Max 1 MB</p>
 							<input type="file" accept="image/jpeg,image/png" (change)="uploadProfileImage($event)">
 						</div>
 						<br>
