--- a/recruit-gui/src/app/statistics/statistics.component.html
+++ b/recruit-gui/src/app/statistics/statistics.component.html
@@ -85,7 +85,7 @@
 					</div>
 				</div>
 				<div class="chart-wrapper" *ngIf="loginChartView == 'table'">
-					<h3>logins: Recruiters: {{loginCountRecruiter}} Candidates: {{loginCountCandidate}}</h3>
+					<h3>Searches</h3>
 					<div class="recruiter-stats">
 					<table style="width:100%">
 							<thead>
