--- a/recruit-gui/src/app/listing/listing.component.css
+++ b/recruit-gui/src/app/listing/listing.component.css
@@ -118,15 +118,27 @@
 
 .listing-pane{
 	width:95%;
-	margin: auto;
+	margin: 0 auto;
+	padding-left:3%;
+
+}
+
+.mobile-listing-layout-pane{
+	padding-left:0%;
+	margin-left:3%;
+}
+
+.mobile-listing-layout-filters{
+	margin-left:3%;
 }
 
 .job-post{
-	width:320px;
+	width:22%;
 	height:150px;
 	padding:20px;
 	background:#e8e8e8;
-	margin:15px;
+	margin-top:15px;
+	margin-right:3%;
 	display:inline-block;
 	vertical-align: top;
 	cursor:pointer;
@@ -139,10 +151,6 @@
 	font-weight:bold;
 }
 
-.mobile-listing-layout{
-	max-width:340px;
-}
-
 .listing-country{
 	display: table;
     margin: 0 auto;
@@ -152,6 +160,11 @@
 .job-post-contract-type{
 	text-align:center;
 	margin-top:10px;
+}
+
+.mobile-listing-layout{
+	width:100%;
+	
 }
 
 
@@ -245,12 +258,13 @@
 }
 
 .filters{
-	margin-top:20px;
-	margin-left:30px;
-	margin-right:30px;
+	
+	width:95%;
 	border-bottom:1px solid black;
 	margin-bottom:10px;
 	background:#e8e8e8;
+	margin:auto;
+	margin-top:20px;
 }
 
 .listing{
