--- a/recruit-gui/src/app/app.component.css
+++ b/recruit-gui/src/app/app.component.css
@@ -47,6 +47,14 @@
 	border-right: solid 1px grey;
 }
 
+.li-arenella-nav-mob{
+	margin-bottom:5px;
+	width:48%;
+	margin-left:1%;
+	margin-right:1%;
+	text-align:center;
+}
+
 .li-arenella-nav-pre-login{
 	margin-bottom:5px;
 	float:left;
@@ -59,6 +67,15 @@
 .li-arenella-nav-pre-login-std{
 	min-width:80px;
 	max-width:85px;
+}
+
+.li-arenella-nav-pre-login-mob{
+	margin-bottom:5px;
+	width:48%;
+	margin-left:1%;
+	margin-right:1%;
+	text-align:center;
+	border-right: solid 1px grey;
 }
 
 .li-arenella-nav-pre-login-std:hover{
